--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -1,26 +1,31 @@
-on:
-  workflow_dispatch: {}
-  pull_request: {}
-  push:
-    branches:
-    - main
-    - master
-    paths:
-    - .github/workflows/semgrep.yml
-  schedule:
-  # random HH:MM to avoid a load spike on GitHub Actions at 00:00
-  - cron: 15 22 * * *
 name: Semgrep
+
+on:
+  workflow_dispatch: {}      # Manual trigger
+  pull_request: {}           # Auto-run on PRs
+  push:                      # Auto-run on pushes to main/master
+    branches:
+      - main
+      - master
+  schedule:                  # Optional: run nightly
+    - cron: 15 22 * * *
+
 jobs:
   semgrep:
     name: semgrep/ci
     runs-on: ubuntu-latest
+
     permissions:
       contents: read
-    env:
-      SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
-    container:
-      image: semgrep/semgrep
+      security-events: write
+      actions: read
+
     steps:
-    - uses: actions/checkout@v4
-    - run: semgrep ci
+      - uses: actions/checkout@v4
+
+      - uses: returntocorp/semgrep-action@v1
+        with:
+          config: auto                    # Use default rule sets
+          all_paths: true                 # Optional: scan full repo (great for demo)
+        env:
+          SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
