--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -1,13 +1,13 @@
 name: Semgrep
 
 on:
-  workflow_dispatch: {}      # Manual trigger
-  pull_request: {}           # Auto-run on PRs
-  push:                      # Auto-run on pushes to main/master
+  workflow_dispatch: {}
+  pull_request: {}
+  push:
     branches:
       - main
       - master
-  schedule:                  # Optional: run nightly
+  schedule:
     - cron: 15 22 * * *
 
 jobs:
@@ -25,7 +25,6 @@ jobs:
 
       - uses: returntocorp/semgrep-action@v1
         with:
-          config: auto                    # Use default rule sets
-          all_paths: true                 # Optional: scan full repo (great for demo)
+          config: auto
         env:
           SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
