--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -1,13 +1,13 @@
 name: Semgrep
 
 on:
-  workflow_dispatch: {}
-  pull_request: {}
-  push:
+  workflow_dispatch: {}       # Allow manual runs
+  pull_request: {}            # Scan all PRs
+  push:                       # Scan pushes to these branches
     branches:
       - main
       - master
-  schedule:
+  schedule:                   # Optional: nightly scheduled scan
     - cron: 15 22 * * *
 
 jobs:
@@ -25,6 +25,4 @@ jobs:
 
       - uses: returntocorp/semgrep-action@v1
         with:
-          config: auto
-        env:
-          SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
+          publishToken: ${{ secrets.SEMGREP_APP_TOKEN }}   # ✅ Use cloud-managed rules
